--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ matrix:
     - os: osx
       osx_image: xcode_11.2
       language: swift
+      install:
+        - mkdir swift
+        - wget https://swift.org/builds/${SWIFT_BRANCH}/xcode/${SWIFT_VERSION}/${SWIFT_VERSION}-osx.pkg
+        - installer -pkg ${SWIFT_VERSION}-osx.pkg -target swift
+        - export PATH="swift/Library/Developer/Toolchains/${SWIFT_VERSION}.xctoolchain/usr/bin:${PATH}"
       script:
         - swift package update
         - swift package test --enable-code-coverage
@@ -16,7 +21,9 @@ matrix:
   
     - os: linux
       dist: bionic
+      language: generic
       install:
+        - mkdir swift
         - curl https://swift.org/builds/${SWIFT_BRANCH}/ubuntu1804/${SWIFT_VERSION}/${SWIFT_VERSION}-ubuntu18.04.tar.gz | tar xz -C swift &> /dev/null
         - export PATH="$(pwd)/swift/${SWIFT_VERSION}-ubuntu18.04/usr/bin:${PATH}"
       script:
