--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,14 @@ env:
 matrix:
   include:
     - os: osx
-      osx_image: xcode_11.2
+      osx_image: xcode11.2
       language: swift
-      sudo: required
-      install:
-        - mkdir swift
-        - wget https://swift.org/builds/${SWIFT_BRANCH}/xcode/${SWIFT_VERSION}/${SWIFT_VERSION}-osx.pkg
-        - sudo installer -pkg ${SWIFT_VERSION}-osx.pkg -target /
-        - export PATH="/Library/Developer/Toolchains/${SWIFT_VERSION}.xctoolchain/usr/bin:${PATH}"
       script:
-        - swift --version
         - swift package update
-        - swift package test --enable-code-coverage
+        - swift package generate-xcodeproj
+        - xcodebuild test -scheme SwiftBoundingBox-Package -destination "platform=macOS" -enableCodeCoverage YES -derivedDataPath .build/derivedData
       after_success:
-        - bash <(curl -s https://codecov.io/bash)
+        - bash <(curl -s https://codecov.io/bash) -D .build/derivedData
   
     - os: linux
       dist: bionic
@@ -31,4 +25,4 @@ matrix:
       script:
         - swift --version
         - swift package update
-        - swift package test
+        - swift test
